[misc] Codestyle