@@ -220,7 +220,7 @@ public class XWikiDocumentArchive
                 this.updatedNodeContents.add(nodeContent);
             }
         } catch (Exception e) {
-            Object[] args = { text, new Long(getId()) };
+            Object[] args = { text, Long.valueOf(getId()) };
             throw new XWikiException(XWikiException.MODULE_XWIKI_DIFF,
                 XWikiException.ERROR_XWIKI_DIFF_CONTENT_ERROR,
                 "Exception while constructing archive for JRCS string [{0}] for document [{1}]", e, args);
@@ -337,7 +337,7 @@ public class XWikiDocumentArchive
             doc.setMostRecent(version.equals(getLatestVersion()));
             return doc;
         } catch (Exception e) {
-            Object[] args = { version.toString(), new Long(getId()) };
+            Object[] args = { version.toString(), Long.valueOf(getId()) };
             throw new XWikiException(XWikiException.MODULE_XWIKI_STORE,
                 XWikiException.ERROR_XWIKI_STORE_RCS_READING_REVISIONS,
                 "Exception while reading version [{0}] for document id [{1,number}]", e, args);
