@@ -227,7 +227,7 @@ public class XWikiHibernateAttachmentStore extends XWikiHibernateBaseStore imple
             Session session = getSession(context);
 
             XWikiAttachmentContent content = new XWikiAttachmentContent(attachment);
-            session.load(content, new Long(content.getId()));
+            session.load(content, Long.valueOf(content.getId()));
 
             // Hibernate calls setContent which causes isContentDirty to be true. This is not what we want.
             content.setContentDirty(false);
